<resources>
    <string name="app_name">MAD-Assignment</string>
    <string name="profilepicture">profilePicture</string>
    <string name="profile_picture">profile_picture</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="categories">Categories</string>
    <string name="picturepost">picturePost</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="update_name">Update Name:</string>
    <string name="name">Name</string>
    <string name="update_bio">Update Bio</string>
    <string name="bio">Bio</string>
    <string name="save_changes">Save Changes</string>
    <string name="todo">TODO</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="achieved">Achieved!</string>
    <string name="badge">badge</string>
    <string name="achievements">Achievements</string>
    <string name="food">Food</string>
    <string name="wellness">Wellness</string>
    <string name="health">Health</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">profile</string>
    <string name="task">task</string>
    <string name="upload_post">Upload Post</string>
    <string name="upload">Upload</string>
    <string name="choose_file">Choose File</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="tasks">Tasks</string>
    <string name="upload_image">Upload Image</string>
    <string name="otp">OTP</string>
    <string name="submit">Submit</string>
    <string name="please_enter_the_otp_sent_to_your_phone">Please enter the OTP sent to your phone!</string>
    <string name="logo">logo</string>
    <string name="backbutton">backButton</string>
    <string name="logout">Logout</string>
    <string name="make_the_changes_start_now_today">make the changes, start now today.</string>
    <string name="click_here_to_begin">click here to begin</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="back_button">Back button</string>
    <string name="fitness">Fitness</string>
    <string name="delete">delete</string>
    <string name="menu">menu</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="wed">WED</string>
    <string name="tues">TUES</string>
    <string name="thur">THUR</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="calender">calender</string>
    <string name="date">Date</string>
    <string name="event">Event</string>
    <string name="_1">1</string>
    <string name="what_goals_do_you_want_to_achieve">What goals do you want to achieve?</string>
    <string name="add_event">Add Event</string>
    <string name="notify_me">Notify Me</string>
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

</resources>
