<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_otp_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical"
    android:padding="9dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="135dp"
            android:layout_height="61dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_otp_sent_to_your_phone">

        </TextView>

    </LinearLayout>

    <EditText
        android:id="@+id/otp_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/otp"
        android:importantForAutofill="no"
        android:inputType="textLongMessage"
        android:textAlignment="center">

    </EditText>

    <Button
        android:id="@+id/otp_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="verify"
        android:text="@string/submit" />


</LinearLayout>