<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/date_background"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:id="@+id/et_Task"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:hint="@string/what_goals_do_you_want_to_achieve"
        android:inputType="textShortMessage">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        >
        <Button
            android:id="@+id/addEventButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_event"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textColor="@android:color/black"
            android:layout_weight="1">

        </Button>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notify_me"
            android:layout_margin="10dp"
            android:id="@+id/notifyMe">

        </CheckBox>

    </LinearLayout>





</LinearLayout>