<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="408dp"
        android:layout_height="244dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/userLoginID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.347"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/userLoginID"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:background="@drawable/login_border"
        android:ems="10"
        android:hint="@string/phone_number_username_or_email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/userPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="295dp"
        android:layout_height="50dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/login_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:padding="10dp"
        android:text="@string/forgot_password"
        android:textColor="#74bbe8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="283dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_button"
        android:text="@string/log_in"
        android:textColor="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="207dp"
        android:layout_height="24dp"
        android:gravity="right"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/signUpText2"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/sign_up"
        android:textColor="#74bbe8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/signUpText"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.103" />
</androidx.constraintlayout.widget.ConstraintLayout>