<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".foodUpload">

    <Button
        android:id="@+id/uploadimgbtn2"
        android:layout_width="146dp"
        android:layout_height="45dp"
        android:layout_marginBottom="60dp"
        android:text="@string/upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/choosefilebtn2"
        android:layout_width="148dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="157dp"
        android:text="@string/choose_file"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/foodImageView"
        android:layout_width="351dp"
        android:layout_height="354dp"
        android:layout_marginTop="152dp"
        android:contentDescription="@string/picturepost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@android:color/background_dark" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="422dp"
        android:layout_height="61dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/holo_purple"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/foodbackButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <EditText
        android:id="@+id/foodCaption"
        android:layout_width="328dp"
        android:layout_height="44dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="@string/write_a_caption"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/foodImageView"
        android:text="@string/write_a_caption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4" />
</androidx.constraintlayout.widget.ConstraintLayout>